<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_fragment_title">Welcome To</string>
    <string name="go_to_instructions">Go to instructions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_shoe_list">Open The world</string>
    <string name="instructions_title">Instructions</string>
    <string name="size">Size: %1$s</string>
    <string name="shoe_list">Shoe List</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="company">Company</string>
    <string name="size_label">Size</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_the_shoe">Add The Shoe</string>
    <string name="cancel">Cancel</string>
    <string name="instructions_subtitle">You are about to explore a world of shoes.</string>
    <string name="logout">Logout</string>
</resources>
